# Dictionary_JetBrains

./: CMakeLists.txt  Dictionary.cpp  Dictionary.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Range.cpp  Range.h  SearchProducer.cpp  SearchProducer.h  main.cpp
